external-crates/move/crates/move-compiler/tests/move_check/parser/global_access.exp
error[E03011]: invalid use of reserved name
  ┌─ tests/move_check/parser/global_access.move:9:9
  │
9 │     fun freeze(): u64 { 0 }
  │         ^^^^^^ Invalid function name 'freeze'. 'freeze' is restricted and cannot be used to name a function

warning[W09002]: unused variable
   ┌─ tests/move_check/parser/global_access.move:11:11
   │
11 │     fun t(account: &signer) acquires Self::R {
   │           ^^^^^^^ Unused parameter 'account'. Consider removing or prefixing with an underscore: '_account'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
   ┌─ tests/move_check/parser/global_access.move:13:24
   │
13 │         let _ : bool = ::exists<Self::R>(0x0);
   │                        ^^
   │                        │
   │                        Unexpected '::'
   │                        Expected an expression term

